ci: reduce duplicate CI runs on main branch push
- Remove push trigger from ci.yml, build-wheels.yml, build-cli.yml, codeql.yml
- release.yml is now the ONLY workflow that runs on main branch push
- release.yml handles both release-please and tag-based publishing
- Add check-tag job to properly handle tag push events
- CodeQL now only runs on PRs and weekly schedule
- All workflows still support workflow_dispatch for manual triggers
- All workflows still support workflow_call for reusable workflow usage

This reduces CI runs from 6 workflows to 1 workflow on main branch push:
Before: Release, Build Wheels, Build CLI, CI, CodeQL (5 workflows)
After: Release only (1 workflow, others triggered conditionally)

--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -1,14 +1,10 @@
 name: Build CLI
 
+# Build CLI workflow - only runs on workflow_call (from release.yml) or manual trigger.
+# PR checks build CLI via pr-checks.yml.
+# Main branch pushes are handled by release.yml to avoid duplicate CI runs.
+
 on:
-  push:
-    branches: [main]
-    tags: ['v*']
-  pull_request:
-    paths:
-      - 'crates/**'
-      - 'Cargo.toml'
-      - 'Cargo.lock'
   workflow_dispatch:
   workflow_call:
 
