--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -1,16 +1,10 @@
 name: Build Wheels
 
+# Build wheels workflow - only runs on workflow_call (from release.yml) or manual trigger.
+# PR checks build wheels via pr-checks.yml.
+# Main branch pushes are handled by release.yml to avoid duplicate CI runs.
+
 on:
-  push:
-    branches: [main]
-    tags: ['*']
-  pull_request:
-    paths:
-      - 'src/**'
-      - 'python/**'
-      - 'Cargo.toml'
-      - 'Cargo.lock'
-      - 'pyproject.toml'
   workflow_dispatch:
     inputs:
       reuse-pr-artifacts:
