refactor: extract shared WebView builder logic to auroraview-core
- Add builder module in auroraview-core with shared WebView building logic
- DragDropHandler: reusable file drag-drop event handling
- IpcMessageHandler: shared IPC message parsing and routing
- ProtocolConfig: protocol registration configuration
- Helper functions: create_drag_drop_handler, create_ipc_handler

This allows standalone.rs and native.rs to share common WebView
configuration without code duplication. Both modes now use the
same drag-drop handler implementation.

Benefits:
- Reduced code duplication (~60 lines removed)
- Consistent behavior between standalone and DCC modes
- Easier to add new WebView features in one place
- Better testability with isolated modules

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,9 +36,10 @@ categories = ["gui", "multimedia", "graphics"]
 name = "_core"
 crate-type = ["cdylib", "rlib"]
 
+
 [dependencies]
-# Core library
-auroraview-core = { path = "crates/auroraview-core" }
+# Core library (with wry-builder for shared WebView building logic)
+auroraview-core = { path = "crates/auroraview-core", features = ["wry-builder"] }
 
 # PyO3 for Python bindings (optional)
 # multiple-pymethods: Allow splitting #[pymethods] across multiple files
