ci: add makeLatest flag to ensure correct release ordering

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -371,4 +371,5 @@ jobs:
           allowUpdates: true
           skipIfReleaseExists: false
           updateOnlyUnreleased: false
+          makeLatest: true
 
