fix: add libxdo-dev dependency for Linux builds and fix dead_code warning

--- a/.github/actions/setup-auroraview/action.yml
+++ b/.github/actions/setup-auroraview/action.yml
@@ -81,6 +81,7 @@ runs:
           libxi-dev \
           libxfixes-dev \
           libxtst-dev \
+          libxdo-dev \
           pkg-config
         # Qt6 dependencies for PySide6
         sudo apt-get install -y \
