--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -80,6 +80,7 @@ runs:
           libgtk-3-dev \
           libayatana-appindicator3-dev \
           librsvg2-dev \
+          libxdo-dev \
           pkg-config
 
     - name: Cache Rust build
