--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -57,7 +57,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev
+          sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev libxdo-dev
 
       - name: Build CLI
         run: cargo build -p auroraview-cli --release --target ${{ matrix.target }}
