feat(pack): add standalone Python runtime bundling strategy
- Add python_standalone.rs module for downloading python-build-standalone distributions
- Update BundleStrategy enum with Standalone as default for offline distribution
- Implement pack_fullstack_standalone method in packer.rs
- Add runtime extraction logic in packed.rs for embedded Python
- Add comprehensive unit tests (57 lib + 33 integration = 90 total)
- Update README with application packaging documentation
- Box PythonBundleConfig in PackMode::FullStack to reduce enum size

Bundle strategies comparison:
- standalone (default): Embeds Python runtime, extracts on first run (~50-80MB)
- embedded: Requires system Python (~15MB)
- portable: Directory structure with Python (~50-80MB)
- pyoxidizer: Requires PyOxidizer installed (~30-50MB)

--- a/crates/auroraview-pack/Cargo.toml
+++ b/crates/auroraview-pack/Cargo.toml
@@ -6,7 +6,7 @@ rust-version.workspace = true
 authors.workspace = true
 license.workspace = true
 repository.workspace = true
-description = "AuroraView Pack: Application packaging and bundling tools"
+description = "AuroraView Pack: Zero-dependency application packaging"
 keywords = ["webview", "packaging", "bundler", "rust"]
 categories = ["development-tools", "command-line-utilities"]
 
@@ -18,9 +18,9 @@ path = "src/lib.rs"
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.8"
 
 # Error handling
-anyhow = "1.0"
 thiserror = "2.0"
 
 # Logging
@@ -28,22 +28,20 @@ tracing = "0.1"
 
 # File system operations
 walkdir = "2.5"
-dunce = "1.0"
 
-# Template engine
-askama = "0.14"
+# Compression
+zstd = "0.13"
+flate2 = "1.0"
 
-# Embed static assets
-rust-embed = "8.5"
+# Archive format
+tar = "0.4"
+
+# System directories
+dirs = "6.0"
+
+# Machine ID
+hostname = "0.4"
 
 [dev-dependencies]
 # Testing utilities
 tempfile = "3.20"
-
-[features]
-default = []
-# Enable PyOxidizer runtime integration (future feature)
-pyembed-runtime = []
-
-[lints.rust]
-unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("pyembed-runtime"))'] }
