--- a/crates/auroraview-cli/Cargo.toml
+++ b/crates/auroraview-cli/Cargo.toml
@@ -54,6 +54,10 @@ dirs = "6.0"
 # MIME type detection
 mime_guess = "2.0"
 
+# Compression and archive for runtime extraction
+flate2 = "1.0"
+tar = "0.4"
+
 # Open URLs/files in system default application
 open = "5.3"
 
