feat(pack): add hooks.collect support for bundling examples
- Add HooksConfig and CollectPattern to PackConfig
- Implement collect_hook_resources in Packer to process glob patterns
- Extract resources to AURORAVIEW_RESOURCES_DIR at runtime
- Set AURORAVIEW_EXAMPLES_DIR for example files
- Update gallery/main.py to use environment variables in packed mode
- Update auroraview.pack.toml to collect examples to resources/examples
- Add glob crate dependency for pattern matching

--- a/gallery/auroraview.pack.toml
+++ b/gallery/auroraview.pack.toml
@@ -116,15 +116,16 @@ before_collect = []
 after_pack = []
 
 # Collect example files for the gallery
+# These will be extracted to AURORAVIEW_EXAMPLES_DIR at runtime
 [[hooks.collect]]
 source = "../examples/*.py"
-dest = "examples"
+dest = "resources/examples"
 preserve_structure = false
 description = "Python example files for the gallery"
 
 [[hooks.collect]]
 source = "../examples/*.html"
-dest = "examples"
+dest = "resources/examples"
 preserve_structure = false
 description = "HTML example files"
 
