--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -543,11 +543,98 @@ jobs:
           path: test-screenshots/
           retention-days: 7
 
+  # Gallery pack build test (ensures gallery packaging works)
+  gallery-pack:
+    name: Gallery Pack Build (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 25
+    needs: [quick-checks, cli-build]
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+            exe-ext: .exe
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            exe-ext: ''
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            exe-ext: ''
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@1.90.0
+        with:
+          targets: ${{ matrix.target }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: gallery/package-lock.json
+
+      - name: Install Linux dependencies
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev libxdo-dev
+
+      - name: Cache Rust
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-gallery-pack-${{ hashFiles('Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-cargo-gallery-pack-
+
+      - name: Build Gallery frontend
+        run: |
+          cd gallery
+          npm ci
+          npm run build
+
+      - name: Build CLI
+        run: cargo build -p auroraview-cli --release --target ${{ matrix.target }}
+
+      - name: Pack Gallery (generate project)
+        shell: bash
+        run: |
+          ./target/${{ matrix.target }}/release/auroraview${{ matrix.exe-ext }} pack \
+            --config gallery/auroraview.pack.toml \
+            --output-dir target/pack
+
+      - name: Verify pack output
+        shell: bash
+        run: |
+          echo "Checking pack output..."
+          ls -la target/pack/
+          if [ -d "target/pack/auroraview-gallery" ]; then
+            echo "Pack project generated successfully"
+            ls -la target/pack/auroraview-gallery/
+          else
+            echo "ERROR: Pack project not found"
+            exit 1
+          fi
+
+      - name: Upload pack artifact
+        uses: actions/upload-artifact@v5
+        with:
+          name: gallery-pack-${{ matrix.os }}
+          path: target/pack/
+          retention-days: 3
+
   # Final gate - all critical checks must pass
   pr-ready:
     name: PR Ready
     runs-on: ubuntu-latest
-    needs: [pre-build, python37-test, quick-checks, clippy, python-tests, rust-tests, wheel-build, qt-tests, cli-build, gallery-e2e]
+    needs: [pre-build, python37-test, quick-checks, clippy, python-tests, rust-tests, wheel-build, qt-tests, cli-build, gallery-e2e, gallery-pack]
     if: always()
     steps:
       - name: Check results
@@ -566,6 +653,7 @@ jobs:
             ["qt-tests"]="${{ needs.qt-tests.result }}"
             ["cli-build"]="${{ needs.cli-build.result }}"
             ["gallery-e2e"]="${{ needs.gallery-e2e.result }}"
+            ["gallery-pack"]="${{ needs.gallery-pack.result }}"
           )
 
           failed=0
