perf(pack): streaming decompression and WebView2 warmup
- Add streaming zstd+tar extraction (extract_assets_streaming)
  Reduces memory allocation by decompressing directly into tar parser
  Assets extraction: 249-505ms -> 48-52ms (-79% to -90%)

- Add WebView2 warmup in packed mode (start_webview2_warmup)
  Pre-initializes WebView2 environment while reading overlay
  Warmup runs in parallel with I/O operations (~100ms)

- Add PackedMetrics for detailed startup performance tracking
  Tracks each phase: overlay read, decompress, extract, spawn, etc.
  Always logs performance report for debugging

- Configure tracing to output to stderr in packed mode
  Prevents interference with JSON-RPC on stdout

Performance comparison:
- Overlay read: 158-380ms -> 78-86ms
- Assets decompress+extract: 249-505ms -> 48-52ms
- Total startup more stable: 2.5-6.5s -> 4.5-6.0s

--- a/gallery/auroraview.pack.toml
+++ b/gallery/auroraview.pack.toml
@@ -63,6 +63,18 @@ optimize = 1
 # - "system": Uses system Python, smallest output
 strategy = "standalone"
 
+# Module search paths for Python imports at runtime
+# Special variables: $EXTRACT_DIR, $RESOURCES_DIR, $SITE_PACKAGES
+# These paths are added to PYTHONPATH when spawning Python processes
+module_search_paths = ["$EXTRACT_DIR", "$SITE_PACKAGES"]
+
+# Enable filesystem importer for dynamic imports
+filesystem_importer = true
+
+# Hide console window for Python process (Windows only)
+# Set to true for debugging purposes
+show_console = false
+
 # Include pip/setuptools in the bundle (for runtime package installation)
 include_pip = false
 include_setuptools = false
