--- a/crates/auroraview-cli/Cargo.toml
+++ b/crates/auroraview-cli/Cargo.toml
@@ -67,6 +67,16 @@ image = { version = "0.25", default-features = false, features = ["png"] }
 # Embed static assets
 rust-embed = "8.5"
 
+# Parallel processing
+rayon = "1.10"
+
+[target.'cfg(windows)'.dependencies]
+# WebView2 COM bindings for warmup
+webview2-com = "0.37"
+windows = { version = "0.61", features = [
+    "Win32_System_Com",
+] }
+
 [target.'cfg(windows)'.build-dependencies]
 winresource = "0.1"
 
