fix(ci): add npm retry and improve gallery artifact handling
- Add retry mechanism (3 attempts) for npm ci to handle transient network errors
- Use if: always() for combine-artifacts to run even if some builds fail
- Add artifact existence check before uploading combined artifacts
- Change if-no-files-found to 'warn' for more resilient releases

--- a/.github/workflows/build-gallery.yml
+++ b/.github/workflows/build-gallery.yml
@@ -66,9 +66,24 @@ jobs:
           sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev libxdo-dev
 
       - name: Build Gallery frontend
+        shell: bash
         run: |
           cd gallery
-          npm ci
+          # Retry npm ci up to 3 times to handle transient network errors
+          for i in 1 2 3; do
+            echo "Attempt $i: Running npm ci..."
+            if npm ci; then
+              echo "npm ci succeeded on attempt $i"
+              break
+            else
+              if [ $i -eq 3 ]; then
+                echo "npm ci failed after 3 attempts"
+                exit 1
+              fi
+              echo "npm ci failed, waiting 10 seconds before retry..."
+              sleep 10
+            fi
+          done
           npm run build
 
       - name: Build CLI (for pack command)
@@ -127,10 +142,12 @@ jobs:
           if-no-files-found: error
 
   # Combine all artifacts into one
+  # Uses if: always() to run even if some builds fail, ensuring partial releases
   combine-artifacts:
     name: Combine Gallery Artifacts
     runs-on: ubuntu-latest
     needs: build
+    if: always() && !cancelled()
     steps:
       - name: Download all artifacts
         uses: actions/download-artifact@v6
@@ -138,13 +155,32 @@ jobs:
           pattern: gallery-*
           path: artifacts
           merge-multiple: true
+        continue-on-error: true
 
       - name: List artifacts
-        run: ls -la artifacts/
+        run: |
+          echo "Available gallery artifacts:"
+          if [ -d artifacts ]; then
+            ls -la artifacts/ || echo "No artifacts found"
+          else
+            echo "artifacts directory does not exist"
+          fi
+
+      - name: Check if any artifacts exist
+        id: check
+        run: |
+          if [ -d artifacts ] && [ "$(ls -A artifacts 2>/dev/null)" ]; then
+            echo "has_artifacts=true" >> $GITHUB_OUTPUT
+            echo "Found gallery artifacts to upload"
+          else
+            echo "has_artifacts=false" >> $GITHUB_OUTPUT
+            echo "No gallery artifacts found"
+          fi
 
       - name: Upload combined artifact
+        if: steps.check.outputs.has_artifacts == 'true'
         uses: actions/upload-artifact@v5
         with:
           name: gallery-all-platforms
           path: artifacts/*
-          if-no-files-found: error
+          if-no-files-found: warn
