--- a/.codecov.yml
+++ b/.codecov.yml
@@ -146,7 +146,10 @@ component_management:
 
 # Ignore paths (for project coverage calculation only, not patch coverage)
 ignore:
+  # Test directories (all levels)
   - "tests/"
+  - "crates/*/tests/"
+  # Non-code files
   - "examples/"
   - "docs/"
   - "*.md"
@@ -155,9 +158,16 @@ ignore:
   - "*.yaml"
   - ".github/"
   - "scripts/"
-  - "python/auroraview/_version.py"  # Auto-generated
-  - "**/mod.rs"  # Rust module definition files (no logic to test)
-  - "**/templates/"  # Template files
+  - "gallery/"
+  # Auto-generated files
+  - "python/auroraview/_version.py"
+  # Rust module definition files (no logic to test)
+  - "**/mod.rs"
+  # Template files
+  - "**/templates/"
+  # Build artifacts
+  - "target/"
+  - "pack-output/"
 
 # GitHub checks
 github_checks:
