--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -214,6 +214,65 @@ jobs:
       contents: read
       actions: write
 
+  # Update Gallery screenshots in assets/images/
+  update-gallery-screenshots:
+    name: Update Gallery Screenshots
+    runs-on: ubuntu-latest
+    needs: [release-please, check-tag]
+    if: |
+      always() &&
+      ((needs.release-please.result == 'success' && needs.release-please.outputs.release_created == 'true') ||
+       (needs.check-tag.result == 'success' && needs.check-tag.outputs.is_tag == 'true'))
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          ref: main
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: gallery/package-lock.json
+
+      - name: Setup Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: '3.11'
+
+      - name: Build Gallery frontend
+        run: |
+          cd gallery
+          npm ci
+          npm run build
+
+      - name: Install Playwright
+        run: |
+          pip install playwright
+          playwright install chromium --with-deps
+
+      - name: Take Gallery screenshots
+        run: |
+          python scripts/test_gallery_e2e.py --screenshots-only --update-assets
+
+      - name: Commit updated screenshots
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Check if there are changes
+          if git diff --quiet assets/images/; then
+            echo "No screenshot changes detected"
+          else
+            git add assets/images/gallery_*.png
+            git commit -m "docs: update gallery screenshots [skip ci]"
+            git push
+            echo "Screenshots updated and pushed"
+          fi
+
   # Publish to PyPI - waits for either reused or built wheels
   pypi-publish:
     name: Publish to PyPI
